objects/AIA_Plan_Benefits__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Group__c</fullName>
        <label>Benefit Group</label>
        <referenceTo>AIA_Plan_Grouper__c</referenceTo>
        <relationshipLabel>Plan Benefits</relationshipLabel>
        <relationshipName>Plan_Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Benefit_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coinsurance_AmountHigh__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coinsurance - AmountHigh</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coinsurance_AmountIncrement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coinsurance - AmountIncrement</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coinsurance_AmountLow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coinsurance - AmountLow</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coinsurance_Amount_AddtionalIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coinsurance-Amount-AddtionalIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coinsurance_Amount_InvalidIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coinsurance_Amount_InvalidIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coinsurance_DefaultAmount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coinsurance-DefaultAmount</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_AmountHigh__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -AmountRange-High</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_AmountIncrement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay - AmountRange-Increment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_AmountLow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay - AmountRange-Low</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_AmountRange_AdditionalIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -AmountRange-AdditionalIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_AmountRange_InvalidIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -AmountRange-InvalidIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_PCPCopay_AdditionalIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -PCPCopay-AdditionalIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_PCPCopay_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -PCPCopay-Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_PCPCopay_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -PCPCopay-High</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_PCPCopay_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -PCPCopay-Increment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_PCPCopay_InvalidIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -PCPCopay-InvalidIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_PCPCopay_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -PCPCopay-Low</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_PerAdmissionCopay_AddtlIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -PerAdmissionCopay-AddtlIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_PerAdmissionCopay_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -PerAdmissionCopay-Amount</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_PerAdmissionCopay_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -PerAdmissionCopay-High</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_PerAdmissionCopay_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -PerAdmissionCopay-Increment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_PerAdmissionCopay_InvalidIncrement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay-PerAdmissionCopay-InvalidIncrement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_PerAdmissionCopay_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -PerAdmissionCopay-Low</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_SpecialistCopay_AddIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -SpecialistCopay-AddIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_SpecialistCopay_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -SpecialistCopay-Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_SpecialistCopay_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -SpecialistCopay-High</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_SpecialistCopay_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -SpecialistCopay-Increment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_SpecialistCopay_InvalidIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -SpecialistCopay-InvalidIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_SpecialistCopay_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay -SpecialistCopay-Low</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_AliasName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 1 - AliasName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Benefit_Comment_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 1 - Benefit Comment Codes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_DeductibleApplies__c</fullName>
        <label>Copay Type 1 - DeductibleApplies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay_Type_1_DefaultAmount__c</fullName>
        <label>Copay_Type_1_DefaultAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Individual_Mandate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copay Type 1 - Individual Mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_IsCovered__c</fullName>
        <label>Copay Type 1 - IsCovered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Is_ASO_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copay Type 1 - Is ASO Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Jurisdiction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 1 - Jurisdiction`</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Mandate_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 1 - Mandate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_MaxAgeFrom__c</fullName>
        <label>Copay Type 1 - MaxAgeFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_MaxAgeTo__c</fullName>
        <label>Copay Type 1 - MaxAgeTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_MaxAgeType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 1 - MaxAgeType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_MaxApply__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 1 - MaxApply</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_MaxDurationType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 1 - MaxDurationType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_MaxDuration__c</fullName>
        <label>Copay Type 1 - MaxDuration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_MaxType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 1 - MaxType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Max__c</fullName>
        <label>Copay Type 1 - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_TierAgeFrom__c</fullName>
        <label>Copay Type 1 - TierAgeFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_TierAgeTo__c</fullName>
        <label>Copay Type 1 - TierAgeTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_TierAgeType__c</fullName>
        <label>Copay Type 1 - TierAgeType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay_Type_1_TierLimitDurationType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 1- TierLimitDurationType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_TierLimitFrom__c</fullName>
        <label>Copay Type 1 - TierLimitFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_TierLimitTo__c</fullName>
        <label>Copay Type 1 - TierLimitTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_TierLimitType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 1 - TierLimitType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_AliasName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 2 - AliasName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Benefit_Comment_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 2 - Benefit Comment Codes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_DeductibleApplies__c</fullName>
        <label>Copay Type 2 - DeductibleApplies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay_Type_2_DefaultAmount__c</fullName>
        <label>Copay_Type_2_DefaultAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Individual_Mandate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copay Type 2 - Individual Mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_IsCovered__c</fullName>
        <label>Copay Type 2 - IsCovered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Is_ASO_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copay Type 2 - Is ASO Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Jurisdiction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 2 - Jurisdiction`</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Mandate_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 2 - Mandate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_MaxAgeFrom__c</fullName>
        <label>Copay Type 2 - MaxAgeFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_MaxAgeTo__c</fullName>
        <label>Copay Type 2 - MaxAgeTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_MaxAgeType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 2 - MaxAgeType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_MaxApply__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 2 - MaxApply</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_MaxDurationType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 2 - MaxDurationType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_MaxDuration__c</fullName>
        <label>Copay Type 2 - MaxDuration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_MaxType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 2 - MaxType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Max__c</fullName>
        <label>Copay Type 2 - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_TierAgeFrom__c</fullName>
        <label>Copay Type 2 - TierAgeFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_TierAgeTo__c</fullName>
        <label>Copay Type 2 - TierAgeTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_TierAgeType__c</fullName>
        <label>Copay Type 2 - TierAgeType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay_Type_2_TierLimitDurationType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 2 - TierLimitDurationType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_TierLimitFrom__c</fullName>
        <label>Copay Type 2 - TierLimitFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_TierLimitTo__c</fullName>
        <label>Copay Type 2 - TierLimitTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_TierLimitType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Type 2 - TierLimitType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_AdditionalIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Share-AdditionalIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Default_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Help Text</inlineHelpText>
        <label>Cost Share - Default Amount</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Share - High</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Share - Increment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_InvalidIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Share-InvalidIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Share - Low</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_PeriodValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Share-PeriodValue</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_TimeValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Share-TimeValue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Type__c</fullName>
        <label>Cost Share Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Dropdown_Yes_No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Davis_Benefit_Variable__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Davis Benefit Variable</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouper_Name__c</fullName>
        <formula>Benefit_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grouper Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Mandate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISExisting_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISExisting_Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IS_ASO_Only__c</fullName>
        <label>Is ASO Only</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsAppGlobalCoinsurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAppGlobalCoinsurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAppGlobalCopay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAppGlobalCopay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MandateLockDownInd__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MandateLockDownInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MappingBRFBenefitID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MappingBRFBenefitID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxLimitation_Benefit_Comment_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxLimitation_Benefit_Comment_Codes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxLimitation_Jurisdiction__c</fullName>
        <label>MaxLimitation_Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>V - VA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxLimitation_Mandate_Ind__c</fullName>
        <label>MaxLimitation_Mandate_Ind</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxLimitation_Mandate_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxLimitation_Mandate_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxLimitation_MaxAgeFrom__c</fullName>
        <label>MaxLimitation_MaxAgeFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxLimitation_MaxAgeTo__c</fullName>
        <label>MaxLimitation_MaxAgeTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxLimitation_MaxAgeType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxLimitation_MaxAgeType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxLimitation_MaxApply__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxLimitation_MaxApply</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxLimitation_MaxDurationType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxLimitation_MaxDurationType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxLimitation_MaxDuration__c</fullName>
        <label>MaxLimitation_MaxDuration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxLimitation_MaxType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxLimitation_MaxType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxLimitation_Max_Value__c</fullName>
        <label>MaxLimitation_Max_Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxPayment_High__c</fullName>
        <label>MaxPayment_High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxPayment_Increment__c</fullName>
        <label>MaxPayment_Increment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxPayment_Low__c</fullName>
        <label>MaxPayment_Low</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinPayment_Hiigh__c</fullName>
        <label>MinPayment_Hiigh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinPayment_Increment__c</fullName>
        <label>MinPayment_Increment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinPayment_Low__c</fullName>
        <label>MinPayment_Low</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <formula>Benefit_Group__r.Plan_Network__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCS_Benefit_Id__c</fullName>
        <description>stores benefit id coming from PCS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PCS Benefit Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Benefit_Name__c</fullName>
        <formula>TRIM(LEFT(Benefit_Name__c ,(if( CONTAINS( Benefit_Name__c ,' - ') ,(FIND(' - ',Benefit_Name__c , 1)), if ( CONTAINS(Benefit_Name__c ,' – '),(FIND(' – ',Benefit_Name__c , 1)), LEN( Benefit_Name__c )) ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Benefit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Value__c</fullName>
        <label>Period Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlaceOfService__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PlaceOfService</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_of_Service__c</fullName>
        <label>Place of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freestanding</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Inpatient</fullName>
                </value>
                <value>
                    <fullName>Outpatient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <formula>CASESAFEID(Benefit_Group__r.Plan_Network__r.Plan__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProviderType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Facility Practitioner</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>PCP</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BRF</fullName>
                </value>
                <value>
                    <fullName>BDD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Three_Month_Deductible_Carryover__c</fullName>
        <description>B-03316</description>
        <label>CostShare-ThreeMonth DeductibleCarryover</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Benefit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Time Benefit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit</fullName>
                </value>
                <value>
                    <fullName>Cost Share</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variation_Condition_ID__c</fullName>
        <description>coming from PCS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Variation Condition ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>